--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,16 @@
     <Button
         android:id="@+id/but_my_day"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
+        android:layout_height="60dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="10dp"
         android:backgroundTint="@color/black"
-        android:fontFamily="@font/anonymous_pro"
+        android:fontFamily="@font/main_font"
         android:gravity="left"
         android:text="# my day"
         android:textAllCaps="false"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,16 +30,16 @@
     <Button
         android:id="@+id/but_favorities"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
+        android:layout_height="60dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="10dp"
         android:backgroundTint="@color/black"
-        android:fontFamily="@font/anonymous_pro"
+        android:fontFamily="@font/main_font"
         android:gravity="left"
         android:text="# favorities"
         android:textAllCaps="false"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/but_my_day" />
@@ -47,16 +47,16 @@
     <Button
         android:id="@+id/but_completed"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
+        android:layout_height="60dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="10dp"
         android:backgroundTint="@color/black"
-        android:fontFamily="@font/anonymous_pro"
+        android:fontFamily="@font/main_font"
         android:gravity="left"
         android:text="# completed"
         android:textAllCaps="false"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/but_favorities" />
