--- a/app/src/main/res/layout/section_item.xml
+++ b/app/src/main/res/layout/section_item.xml
@@ -27,11 +27,13 @@
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="20sp" />
+
         <ImageButton
+            android:id="@+id/more"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/baseline_more_vert_24"
-            android:background="@color/black"
             android:layout_gravity="center"
-            />
+            android:background="@color/black"
+            android:onClick="showMore"
+            android:src="@drawable/baseline_more_vert_24" />
 </LinearLayout>
