--- a/app/src/main/res/menu/more_menu.xml
+++ b/app/src/main/res/menu/more_menu.xml
@@ -3,13 +3,16 @@
     <item
         android:id="@+id/up"
         android:icon="@drawable/baseline_arrow_upward_24"
-        android:iconTintMode="src_in"/>
+        android:iconTintMode="src_in"
+        android:title="@string/move_up" />
     <item
         android:id="@+id/down"
         android:icon="@drawable/baseline_arrow_downward_24"
-        android:iconTintMode="src_in"/>
+        android:iconTintMode="src_in"
+        android:title="@string/move_down"/>
     <item
         android:id="@+id/delete"
         android:icon="@drawable/baseline_delete_24"
-        android:iconTintMode="src_in"/>
+        android:iconTintMode="src_in"
+        android:title="@string/delete" />
 </menu>
