added clickable profile button(main_screen)

--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -38,6 +38,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:backgroundTint="@color/black"
+            android:onClick="showProfile"
             android:src="@drawable/home"></ImageButton>
 
         <ImageButton
