--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -6,17 +6,18 @@
     android:layout_height="match_parent"
     android:background="@color/black">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="32dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="180dp"
+    <Button
+        android:id="@+id/confirm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:fontFamily="@font/main_font"
+        android:text="confirm"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/edit"
-        android:background="@drawable/edit_border"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -102,4 +103,16 @@
             android:textColor="@color/white"
             android:textColorHint="@color/white" />
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/edit"
+        android:layout_width="36dp"
+        android:layout_height="32dp"
+        android:layout_marginBottom="340dp"
+        android:background="@drawable/edittext_box"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_edit_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
