--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -47,6 +47,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:backgroundTint="@color/black"
+            android:onClick="showProfile"
             android:src="@drawable/profile"></ImageButton>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
