--- a/app/src/main/res/layout/section_item.xml
+++ b/app/src/main/res/layout/section_item.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/black"
+    android:layout_height="50dp"
     android:layout_marginBottom="10dp"
+    android:background="@color/black"
     android:orientation="horizontal">
+
         <TextView
             android:id="@+id/symbol"
             android:layout_width="wrap_content"
@@ -23,17 +24,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="10"
+            android:gravity="center|left"
             android:fontFamily="@font/main_font"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="20sp" />
 
-        <ImageButton
-            android:id="@+id/more"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="@color/black"
-            android:onClick="showMore"
-            android:src="@drawable/baseline_more_vert_24" />
 </LinearLayout>
