--- a/app/src/main/res/layout/section_item.xml
+++ b/app/src/main/res/layout/section_item.xml
@@ -29,10 +29,12 @@
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="20sp" />
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/baseline_edit_24"
-            android:background="@color/black"></ImageButton>
+            android:background="@color/black"
+            android:onClick="editSection"
+            android:src="@drawable/baseline_edit_24"></ImageButton>
 
 </LinearLayout>
