--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -54,7 +54,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/ent_pas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_box"
@@ -91,7 +91,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/ent_log"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_box"
