--- a/app/src/main/res/layout/section_item.xml
+++ b/app/src/main/res/layout/section_item.xml
@@ -31,6 +31,7 @@
             android:textSize="20sp" />
 
         <ImageButton
+            android:id="@+id/edit"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@color/black"
