--- a/app/src/main/res/layout/authorization_activity.xml
+++ b/app/src/main/res/layout/authorization_activity.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login_layout">
 
         <TextView
-            android:id="@+id/password"
+            android:id="@+id/login"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/main_font"
